# crypto-botter

./: .gitignore  pyproject.toml
src/: gmo_api.py  main.py  read_pickle.py
src/data/BTC/1min/months/: 202401.pkl  202402.pkl
